--- a/hello.html
+++ b/hello.html
@@ -1,8 +1,10 @@
 <!-- author:ODEODEODE (elenakalinina207@gmail.com--> 
 <html>
     <head>
+        <title>Hello World Page</title>
     </head>
     <body>
         <h1>Hello, World!</h1>
+        <p>Let's learn Git together.</p>
     </body>
 </html>
